# claude-memory-mcp

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  setup.sh
.claude/: CLAUDE.md
.claude/commands/: startup.md
claude/: CODEBASE_STATE.md  CONTEXT_MEMORY.md  DEPLOYMENT_STANDARDS.md
claude/specs/: README.md
src/claude_memory_mcp/: __init__.py  client.py  config.py  scoping.py  server.py
templates/: GLOBAL_CLAUDE.md
tests/: conftest.py  test_client.py  test_scoping.py  test_server.py
